Fix bug x scrolling on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,10 @@ button {
 html {
   background-color: #18191a;
   color: #e6e6e6;
+}
+
+html,
+body {
   overflow-x: hidden;
 }
 
